@startuml

title __BOUNDARY's Class Diagram__\n

  namespace stars.boundary {
    class stars.boundary.AdminUI {
        - dateFormatter : DateTimeFormatter
        - timeFormatter : DateTimeFormatter
        + AdminUI()
        + displayMenu()
        - getallcourses()
        - getallstudents()
    }
  }
  

  namespace stars.boundary {
    class stars.boundary.IndexTimingDisplayer {
        - HEIGHT : int
        - WIDTH : int
        + IndexTimingDisplayer()
        + displayTimetable()
        + pad()
    }
  }
  

  namespace stars.boundary {
    class stars.boundary.IntScanner {
        {static} + nextInt()
    }
  }
  

  namespace stars.boundary {
    class stars.boundary.LoginUI {
        {static} + main()
        {static} - login()
    }
  }
  

  namespace stars.boundary {
    class stars.boundary.PrintIndexTimetableUI {
        + printIndexTimetable()
    }
  }
  

  namespace stars.boundary {
    abstract class stars.boundary.SelectUI {
        + select()
    }
  }
  

  namespace stars.boundary {
    class stars.boundary.StudentUI {
        + StudentUI()
        + displayMenu()
    }
  }
  

  namespace stars.boundary {
    class stars.boundary.TimetableDisplayer {
        - HEIGHT : int
        - WIDTH : int
        + TimetableDisplayer()
        + displayTimetable()
        + pad()
    }
  }
  

  stars.boundary.AdminUI -up-|> stars.boundary.SelectUI
  stars.boundary.AdminUI o-- stars.controller.AdminController : adminController
  stars.boundary.IndexTimingDisplayer o-- stars.entity.Index : index
  stars.boundary.PrintIndexTimetableUI -up-|> stars.boundary.SelectUI
  stars.boundary.StudentUI -up-|> stars.boundary.SelectUI
  stars.boundary.StudentUI o-- stars.controller.StudentController : studentController
  stars.boundary.TimetableDisplayer o-- stars.entity.Student : student


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
